<resources>
    <string name="app_name">Farmerama</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="sensors">Sensors</string>
    <string name="employees">Employees</string>
    <string name="areas">Areas</string>
    <string name="latest_temperature">Latest temperature</string>
    <string name="latest_measurements">Latest Measurements</string>
    <string name="add_area">Add New Area</string>
    <string name="area_name">Area Name</string>
    <string name="description">Description</string>
    <string name="noPigs">Number Of Pigs</string>
    <string name="create">Create</string>
    <string name="measurementType">type</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="hardwareId">Hardware Id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role">Role</string>
    <string name="measurement">Measurement</string>
    <string name="time">Time</string>
    <string name="guest" translatable="false">Guest</string>
    <string name="no_email" translatable="false">No email</string>
    <string name="Login" translatable="false">Login</string>
    <string name="historical_measurements">Historical Measurements</string>
    <string name="sign_out">Sign Out</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="threshold_modifications">Threshold Modifications</string>
    <string name="upper_threshold">Upper threshold</string>
    <string name="lower_threshold">Lower threshold</string>
    <string name="Thresholds">Thresholds</string>
    <string name="employees_fragment">Employees fragment</string>
    <string name="exceeded_measurements">Exceeded Measurements</string>
    <string name="settings">Settings</string>
    <string-array name="roles">
        <item>EMPLOYEE</item>
        <item>ADMINISTRATOR</item>
    </string-array>

</resources>