...
    <item
        android:id="@+id/home"
        android:title="Home">
        <menu>

            <item
                android:id="@+id/latestDataFragment"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/latest_measurements" />


            <item
                android:id="@+id/historicalDataFragment"
                android:icon="@drawable/ic_baseline_history_24"
                android:title="@string/historical_measurements" />

            <item
                android:id="@+id/areasFragment"
                android:icon="@drawable/ic_baseline_location_on_24"
                android:title="@string/areas" />

            <item
                android:id="@+id/loginFragment"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/Login" />

        </menu>
    </item>
</group>

<group
...
